--- a/.github/workflows/ci-cd.test.yml
+++ b/.github/workflows/ci-cd.test.yml
@@ -1,153 +1,256 @@
-name: CI/CD Test Pipeline
+name: CI/CD Pré-production Pipeline
 
 on:
+  # Déclenche le workflow sur les pushes vers la branche "preprod"
   push:
     branches:
-      - test
+      - preprod
+  # Déclenche le workflow sur les pull requests vers la branche "preprod"
   pull_request:
     branches:
-      - test
+      - preprod
 
 env:
+  # Variables d'environnement pour l'environnement de préproduction
   ENVIRONMENT: test
-  DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
-  NEXTAUTH_SECRET: ${{ secrets.TEST_NEXTAUTH_SECRET }}
-  NEXT_PUBLIC_SITE_URL: http://test.ismail-mouyahada.com
-  NEXT_PUBLIC_SOCKET_URL: ws://test-socket.ismail-mouyahada.com
-
+  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+  NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+  NEXT_PUBLIC_SITE_URL: ${{ secrets.NEXT_PUBLIC_SITE_URL }}
+  NEXT_PUBLIC_SOCKET_URL: ${{ secrets.NEXT_PUBLIC_SOCKET_URL }}
+  DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+  
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true # Annule toute exécution précédente du même workflow si un nouveau est déclenché
+  
 jobs:
-  deps-vulnerability:
+  # Job de construction de l'application
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-        
-      - name: Install dependencies
-        run: npm install
-        
-      - name: Run dependency vulnerability scan
-        uses: advanced-security/npm-audit-action@v1
-      
+        uses: actions/checkout@v3 # Vérifie le code source de la branche cible
+
+      - name: Run end-to-end tests
+        run: |
+          # Définit les variables d'environnement nécessaires pour les tests end-to-end
+          export DATABASE_URL=postgresql://test:QgeKwm71KPl8RyJxSh8bGBWet3dlAE7U@dpg-cr7esg23esus7388bnog-a.oregon-postgres.render.com/test_db_satsquare
+          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJXCPISJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
+          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
+          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
+          export REDIS_URL="redis://localhost:6379"
+          cd ./satsquare
+
+          # Installation des dépendances et préparation de l'application
+          npm install
+          npx prisma generate
+          npx prisma db push
+          npm run seed
+          npm run build
+
+  # Job de linting du code source
   lint:
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd ./satsquare
+          npm ci # Installation des dépendances
 
       - name: Run Linting
-        run: npm run lint
-        
+        run: |
+          cd ./satsquare
+          npm run lint # Exécute le linting
+
+  # Job pour les tests unitaires
   unit-tests:
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd ./satsquare
+          npm ci
+          npm i jest-environment-jsdom jest # Installe Jest pour les tests unitaires
 
       - name: Run Jest Unit Tests
-        run: npm run test:watch
-        
+        run: |
+          cd ./satsquare
+          npm run test # Exécute les tests unitaires
+
+  # Job pour les tests end-to-end
+  e2e-tests:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Run end-to-end tests
+        run: |
+          # Définit les variables d'environnement nécessaires pour les tests end-to-end
+          export DATABASE_URL=postgresql://test:QgeKwm71KPl8RyJxSh8bGBWet3dlAE7U@dpg-cr7esg23esus7388bnog-a.oregon-postgres.render.com/test_db_satsquare
+          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
+          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
+          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
+          export REDIS_URL="redis://localhost:6379"
+          cd ./satsquare
+
+          # Installation des dépendances et préparation de l'application pour les tests end-to-end
+          npm install
+          npx prisma generate
+          npx prisma db push
+          npm run seed
+          npm run build
+          # npm run test:e2e # Désactivé pour l'instant
+
+  # Job pour la vérification des vulnérabilités des dépendances
+  deps-vulnerability:
+    needs: [e2e-tests, build, unit-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Create lock file
+        run: |
+          cd ./satsquare
+          npm install --package-lock-only # Génère uniquement le fichier package-lock
+
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci
+          npm update # Met à jour les dépendances
+
+      - name: Install jest-environment-jsdom
+        run: |
+          cd ./satsquare
+          npm install jest-environment-jsdom --save-dev # Installe une dépendance spécifique pour les tests
+
+      - name: Audit npm dependencies
+        run: |
+          cd ./satsquare
+          npm audit --audit-level=moderate # Audite les dépendances npm pour les vulnérabilités
+
+  # Job pour la couverture de code avec Codecov
   codecov:
+    needs: [e2e-tests, build, unit-tests]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd ./satsquare
+          npm ci
+          npm i jest-environment-jsdom jest # Installe les dépendances nécessaires pour les tests
 
       - name: Run tests and generate coverage report
-        run: npm run test -- --coverage
+        run: |
+          cd ./satsquare
+          npm run test -- --coverage # Exécute les tests avec rapport de couverture
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }} # Utilise le token secret pour l'authentification
 
-  security:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Run security analysis
-        uses: github/codeql-action/analyze@v2
-        
+  # Job pour l'analyse de performance avec Lighthouse
   lighthouse:
+    needs: [codecov, deps-vulnerability]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd ./satsquare
+          npm install # Installe les dépendances nécessaires
 
       - name: Run Lighthouse CI
-        run: npx lhci autorun
+        run: |
+          cd ./satsquare
+          npx lhci autorun # Exécute Lighthouse CI pour l'analyse de performance
 
+  # Job pour construire l'image Docker et la pousser vers le registre
   docker-build:
+    needs: lighthouse
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+  
       - name: Login to GitHub Container Registry
-        run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-      - name: Build Docker image
-        run: docker build -t ghcr.io/ismail-mouyahada/sat-square:test-${{ github.sha }} -f Dockerfile.test .
-
-      - name: Scan Docker image for vulnerabilities
-        uses: aquasecurity/trivy-action@v0.4.1
+        uses: docker/login-action@v3
         with:
-          image-ref: ghcr.io/ismail-mouyahada/sat-square:test-${{ github.sha }}
-
-      - name: Push Docker image to GitHub Container Registry
-        run: docker push ghcr.io/ismail-mouyahada/sat-square:test-${{ github.sha }}
-
-  e2e-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run end-to-end tests
-        run: npm run test:e2e
-        
-  stress-test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run stress tests
-        run: npm run test:stress
-
-  notify:
-    runs-on: ubuntu-latest
-    needs: [deps-vulnerability, lint, unit-tests, codecov, security, lighthouse, docker-build, e2e-tests, stress-test]
-    steps:
-      - name: Send Discord notification on success
-        if: success()
-        run: |
-          curl -X POST -H "Content-Type: application/json" \
-          -d '{"content": "CI/CD Test Pipeline succeeded!"}' \
-          ${{ secrets.DISCORD_WEBHOOK_URL }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }} # Se connecte au registre de conteneurs GitHub
           
-      - name: Send Discord notification on failure
-        if: failure()
+      - name: Build Docker image
         run: |
-          curl -X POST -H "Content-Type: application/json" \
-          -d '{"content": "CI/CD Test Pipeline failed!"}' \
-          ${{ secrets.DISCORD_WEBHOOK_URL }}
+          # Définit les variables d'environnement pour le build Docker
+          export DATABASE_URL=postgresql://test:QgeKwm71KPl8RyJxSh8bGBWet3dlAE7U@dpg-cr7esg23esus7388bnog-a.oregon-postgres.render.com/test_db_satsquare
+          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
+          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
+          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
+          export REDIS_URL="redis://localhost:6379"
+          cd ./satsquare
+          docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:latest -f Dockerfile.test . # Construit l'image Docker
+  
+      - name: Scan Docker image for vulnerabilities
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: ghcr.io/ismail-mouyahada/master-satsquare-app:prepod # Scanne l'image Docker pour les vulnérabilités
+  
+      - name: Push Docker image to GitHub Container Registry
+        run: docker push ghcr.io/ismail-mouyahada/master-satsquare-app:prepod # Pousse l'image Docker vers le registre
+
+  # Job pour notifier l'état de la pipeline sur Discord
+  notify:
+    needs: [docker-build,lighthouse]
+    runs-on: ubuntu-latest
+    steps:
+    
+      - name: Notify Discord
+        if: success() # Notifie en cas de succès
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: "https://discord.com/api/webhooks/1278396976320479283/rO-i6oT0mlKCtxXj-2kHtD3RPTwt97jcTB8QOtZoyNZWaRZyWg_h7YEbFWnqkPHnh-zX"
+          message: "l'application tourne en préproduction, félicitations 🎊 "
+          username: "Pré-production BOT Satsquare"
+          avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
+
+      - name: Notify Discord
+        if: failure() # Notifie en cas d'échec
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: "https://discord.com/api/webhooks/1278396976320479283/rO-i6oT0mlKCtxXj-2kHtD3RPTwt97jcTB8QOtZoyNZWaRZyWg_h7YEbFWnqkPHnh-zX"
+          message: " Attention il y a un soucis dans la mis en Pré-production ☣"
+          username: "Pré-production BOT Satsquare"
+          avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
+
+      - name: Notify Discord
+        if: ${{ always() && contains(needs.*.result, 'failure') }} # Notifie si une partie du pipeline a échoué
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: "https://discord.com/api/webhooks/1278396976320479283/rO-i6oT0mlKCtxXj-2kHtD3RPTwt97jcTB8QOtZoyNZWaRZyWg_h7YEbFWnqkPHnh-zX"
+          message: "Une des étapes a due échouée ! 😇"
+          username: "Pré-production BOT Satsquare"
+          avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
