--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -27,13 +27,18 @@
     "@nextui-org/theme": "^2.2.6",
     "@nextui-org/tooltip": "^2.0.34",
     "@prisma/client": "^5.14.0",
+    "@vercel/kv": "^2.0.0",
     "bcrypt": "^5.1.1",
+    "bech32": "^2.0.0",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.12",
     "html2canvas": "^1.4.1",
     "ioredis": "^5.4.1",
+    "jest-environment-jsdom": "^29.7.0",
+    "lnurl": "^0.27.0",
     "lodash.debounce": "^4.0.8",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
