--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -59,7 +59,9 @@
     "@storybook/nextjs": "^8.1.4",
     "@storybook/react": "^8.1.4",
     "@storybook/test": "^8.1.4",
-    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
     "@types/lodash.debounce": "^4.0.9",
