--- a/.github/workflows/ci-cd.prod.yml
+++ b/.github/workflows/ci-cd.prod.yml
@@ -205,18 +205,8 @@ jobs:
       - name: Build Docker image
         run: |
           # Définit les variables d'environnement pour le build Docker
-          export DATABASE_URL=postgresql://prod:2bjPlCNBTvatIwdMbksGeAc6E7ECClP6@dpg-cr7et0bqf0us73beattg-a.frankfurt-postgres.render.com/prod_db_satsquare
-          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
-          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
-          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
-          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
-          export REDIS_URL="redis://localhost:6379"
           cd ./satsquare
-          npm install
-          npx prisma generate
-          npx prisma db push
-          npm run seed
-          npm run build
+          docker build -f Dockerfile.prod --build-arg DATABASE_URL="postgresql://prod:2bjPlCNBTvatIwdMbksGeAc6E7ECClP6@dpg-cr7et0bqf0us73beattg-a.frankfurt-postgres.render.com/prod_db_satsquare" --build-arg NEXTAUTH_SECRET="${{ github.sha }}" -t ghcr.io/ismail-mouyahada/master-satsquare-app:latest .
           docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:latest -f Dockerfile.prod . # Construit l'image Docker
   
       - name: Scan Docker image for vulnerabilities
