--- a/.github/workflows/ci-cd.prod.yml
+++ b/.github/workflows/ci-cd.prod.yml
@@ -186,11 +186,11 @@ jobs:
 
   # Job pour construire l'image Docker et la pousser vers le registre
   docker-build:
-    # needs: lighthouse
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -200,22 +200,29 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }} # Se connecte au registre de conteneurs GitHub
-          
-      - name: Build Docker image
-        run: |
-          # Définit les variables d'environnement pour le build Docker
-          cd ./satsquare
-          docker build -f Dockerfile.prod --build-arg DATABASE_URL="postgresql://prod:2bjPlCNBTvatIwdMbksGeAc6E7ECClP6@dpg-cr7et0bqf0us73beattg-a.frankfurt-postgres.render.com/prod_db_satsquare" --build-arg NEXTAUTH_SECRET="${{ github.sha }}" -t ghcr.io/ismail-mouyahada/master-satsquare-app:latest .
-          docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:latest -f Dockerfile.prod . # Construit l'image Docker
-  
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./satsquare
+          file: ./satsquare/Dockerfile.prod
+          build-args: |
+            DATABASE_URL="postgresql://prod:2bjPlCNBTvatIwdMbksGeAc6E7ECClP6@dpg-cr7et0bqf0us73beattg-a.frankfurt-postgres.render.com/prod_db_satsquare"
+            NEXTAUTH_SECRET="${{ github.sha }}"
+          tags: ghcr.io/ismail-mouyahada/master-satsquare-app:latest
+          push: true
+
       - name: Scan Docker image for vulnerabilities
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: ghcr.io/ismail-mouyahada/master-satsquare-app:latest # Scanne l'image Docker pour les vulnérabilités
-  
+          image-ref: ghcr.io/ismail-mouyahada/master-satsquare-app:latest
+
       - name: Push Docker image to GitHub Container Registry
-        run: docker push ghcr.io/ismail-mouyahada/master-satsquare-app:latest # Pousse l'image Docker vers le registre
+        run: docker push ghcr.io/ismail-mouyahada/master-satsquare-app:latest
 
   # Job pour notifier l'état de la pipeline sur Discord
   notify:
