--- a/satsquare/Dockerfile.prod
+++ b/satsquare/Dockerfile.prod
@@ -23,7 +23,7 @@ ARG REDIS_URL
 
 # Set environment variables based on build-time arguments
 ENV DATABASE_URL=${DATABASE_URL} \
-    NEXT_AUTH_SECRET=${NEXT_AUTH_SECRET} \
+    NEXTAUTH_SECRET=${NEXTAUTH_SECRET} \
     NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY=${NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY} \
     NEXT_PUBLIC_SITE_URL=${NEXT_PUBLIC_SITE_URL} \
     NEXT_PUBLIC_SOCKET_URL=${NEXT_PUBLIC_SOCKET_URL} \
