--- a/.github/workflows/ci-cd.prod.yml
+++ b/.github/workflows/ci-cd.prod.yml
@@ -184,7 +184,7 @@ jobs:
           cd ./satsquare
           npx lhci autorun # Exécute Lighthouse CI pour l'analyse de performance
 
-  # Job pour construire l'image Docker et la pousser vers le registre
+# Job pour construire l'image Docker et la pousser vers le registre
   docker-build:
     needs: lighthouse
     runs-on: ubuntu-latest
@@ -204,29 +204,17 @@ jobs:
           
       - name: Build Docker image
         run: |
-          # Définit les variables d'environnement pour le build Docker
-          export DATABASE_URL=postgresql://prod:2bjPlCNBTvatIwdMbksGeAc6E7ECClP6@dpg-cr7et0bqf0us73beattg-a.frankfurt-postgres.render.com/prod_db_satsquare
-          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
-          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
-          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
-          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
-          export REDIS_URL="redis://localhost:6379"
-          cd ./satsquare
-          npm install
-          npx prisma generate
-          npx prisma db push
-          npm run seed
-          npm run build
-          docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:latest -f Dockerfile.prod . # Construit l'image Docker
+          cd ./satsquare 
+          docker build -f Dockerfile.prod --build-arg DATABASE_URL="postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare" --build-arg NEXTAUTH_SECRET="${{ github.sha }}" -t ghcr.io/ismail-mouyahada/master-satsquare-app:prod-${{ github.sha }} .
   
       - name: Scan Docker image for vulnerabilities
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: ghcr.io/ismail-mouyahada/master-satsquare-app:latest # Scanne l'image Docker pour les vulnérabilités
+          image-ref: ghcr.io/ismail-mouyahada/master-satsquare-app:prod-${{ github.sha }} # Scanne l'image Docker pour les vulnérabilités
   
       - name: Push Docker image to GitHub Container Registry
-        run: docker push ghcr.io/ismail-mouyahada/master-satsquare-app:latest # Pousse l'image Docker vers le registre
-
+        run: docker push ghcr.io/ismail-mouyahada/master-satsquare-app:prod-${{ github.sha }} # Pousse l'image Docker vers le registre
+ 
   # Job pour notifier l'état de la pipeline sur Discord
   notify:
     needs: [docker-build,lighthouse]
@@ -237,7 +225,7 @@ jobs:
         if: success() # Notifie en cas de succès
         uses: discord-actions/message@v2
         with:
-          webhookUrl: "https://discord.com/api/webhooks/1278096229351293008/UdVm3whQn9wb_neR4tuS5TGFfFzaiAo4Jijwa0yuEks1GwoVdrV-lcsdvw5qlA0Kq9CN"
+          webhookUrl: "https://discord.com/api/webhooks/1278522710825238548/4YVTWZ9NsjpKQaVETfY0-00RzdnjUn7i-W9cIgpY9HrQu9-s44Dyg3CARqE9yUFXSxsz"
           message: "l'application tourne en production, félicitations 🎊 "
           username: "Pré-production BOT Satsquare"
           avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
@@ -246,7 +234,7 @@ jobs:
         if: failure() # Notifie en cas d'échec
         uses: discord-actions/message@v2
         with:
-          webhookUrl: "https://discord.com/api/webhooks/1278096229351293008/UdVm3whQn9wb_neR4tuS5TGFfFzaiAo4Jijwa0yuEks1GwoVdrV-lcsdvw5qlA0Kq9CN"
+          webhookUrl: "https://discord.com/api/webhooks/1278522710825238548/4YVTWZ9NsjpKQaVETfY0-00RzdnjUn7i-W9cIgpY9HrQu9-s44Dyg3CARqE9yUFXSxsz"
           message: " Attention il y a un soucis dans la mis en PROD ☣"
           username: "Pré-production BOT Satsquare"
           avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
@@ -255,7 +243,7 @@ jobs:
         if: ${{ always() && contains(needs.*.result, 'failure') }} # Notifie si une partie du pipeline a échoué
         uses: discord-actions/message@v2
         with:
-          webhookUrl: "https://discord.com/api/webhooks/1278096229351293008/UdVm3whQn9wb_neR4tuS5TGFfFzaiAo4Jijwa0yuEks1GwoVdrV-lcsdvw5qlA0Kq9CN"
+          webhookUrl: "https://discord.com/api/webhooks/1278522710825238548/4YVTWZ9NsjpKQaVETfY0-00RzdnjUn7i-W9cIgpY9HrQu9-s44Dyg3CARqE9yUFXSxsz"
           message: "Une des étapes a due échouée ! 😇"
           username: "Pré-production BOT Satsquare"
           avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
