--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -30,6 +30,7 @@
     "@vercel/kv": "^2.0.0",
     "bcrypt": "^5.1.1",
     "bech32": "^2.0.0",
+    "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
